# PHASE-03

./: .gitignore  CLAUDE.md  Dockerfile  README.md
.specify/memory/: constitution.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/(auth)/signin/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/archive/: page.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/dashboard/schedule/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/components/chat/: ChatInterface.tsx  MessageBubble.tsx  StreamingIndicator.tsx
frontend/src/components/dashboard/: Sidebar.tsx
frontend/src/hooks/: useConversation.tsx  useMessages.tsx
frontend/src/services/: conversation.ts  message.ts
frontend/src/types/: conversation.ts  message.ts
history/prompts/ai-chatbot/: 1-ai-chatbot-specification.spec.prompt.md  2-ai-chatbot-implementation-plan.plan.prompt.md  3-ai-chatbot-task-generation.tasks.prompt.md
history/prompts/constitution/: 4-phase-3-ai-chatbot-constitution.constitution.prompt.md
mcp-server/: CLAUDE.md  pyproject.toml
mcp-server/src/: __init__.py  db_client.py  server.py
mcp-server/src/tools/: __init__.py  create_task.py  delete_task.py  list_tasks.py  toggle_task.py  update_task.py
specs/003-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-chatbot/checklists/: requirements.md
specs/003-ai-chatbot/contracts/: conversations-api.yaml  mcp-tools.yaml  messages-api.yaml
(+1 files in other folders)
